# mercadata

./: LICENSE  pyproject.toml
mercadata/: main.py  process_data.py
