[tool.poetry]
name = "mercadata"
version = "0.1.0"
description = ""
authors = ["Domingo Espinosa Medina <domingo.em@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
numpy = "^2.1.1"
pdfplumber = "^0.11.4"
st-gsheets-connection = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
